# dev-services-manager

./: .gitignore  BUILD_GUIDE.md  CROSS_PLATFORM_GUIDE.md  Cargo.toml  README.md  RUST_LOG.toml  STARTUP_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml
capabilities/: main.json
scripts/: bump-version.sh  release-bump.sh  release.sh  start.bat  start.ps1  start.sh
src/: App.tsx  database.rs  events.rs  global.d.ts  index.css  main.rs  main.tsx  services.rs
src/components/: Header.tsx  HighlightedCommand.tsx  MetricCard.tsx  PasswordDialog.tsx  ServiceCard.tsx  ServiceDetailPage.tsx  ServiceGrid.tsx  ServiceLogs.tsx  ServiceManagementDialog.tsx  ServiceManagementPage.tsx  ServiceMetrics.tsx  ServiceRemovalDialog.tsx  ServiceTerminal.tsx  TitleBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  LoadingSpinner.tsx
src/providers/: EventProvider.tsx  NavigationProvider.tsx  ServiceProvider.tsx  ThemeProvider.tsx
src/types/: service.ts
